--- a/templates/index.html
+++ b/templates/index.html
@@ -18,15 +18,15 @@
             <h3>SalesDepotID?</h3><br><input id="second" name="SalesDepotID" required="required">
             <h3>SalesChannelID?</h3><input id="third" name="SalesChannelID" required="required">
             <h3>RouteID ?</h3><br><input id="fourth" name="RouteID" required="required">
-	    <h3>ClientID ?</h3><br><input id="fourth" name="ClientID" required="required">
-	    <h3>ProductID ?</h3><br><input id="fourth" name="ProductID" required="required">
-	    <h3>NewClientName ?</h3><br><input id="fourth" name="NewClientName" required="required">
-	    <h3>NewProductName ?</h3><br><input id="fourth" name="NewProductName" required="required">
-	    <h3>pieces ?</h3><br><input id="fourth" name="pieces" required="required">
-	    <h3>weight ?</h3><br><input id="fourth" name="weight" required="required">
-	    <h3>brand ?</h3><br><input id="fourth" name="brand" required="required">
-	    <h3>Town ?</h3><br><input id="fourth" name="Town" required="required">
-	    <h3>State ?</h3><br><input id="fourth" name="State" required="required">
+	    <h3>ClientID ?</h3><br><input id="fifth" name="ClientID" required="required">
+	    <h3>ProductID ?</h3><br><input id="sixth" name="ProductID" required="required">
+	    <h3>NewClientName ?</h3><br><input id="seventh" name="NewClientName" required="required">
+	    <h3>NewProductName ?</h3><br><input id="eighth" name="NewProductName" required="required">
+	    <h3>pieces ?</h3><br><input id="ninth" name="pieces" required="required">
+	    <h3>weight ?</h3><br><input id="tenth" name="weight" required="required">
+	    <h3>brand ?</h3><br><input id="eleventh" name="brand" required="required">
+	    <h3>Town ?</h3><br><input id="twelth" name="Town" required="required">
+	    <h3>State ?</h3><br><input id="therteenth" name="State" required="required">
             </select>
             <br><br><button id="sub" type="submit ">Calculate Demand for product</button>
             <br>
