--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div style="color:blue">
-        <form action="{{ url_for('predict')}}" method="post">
+        <form action="{{ url_for('predict')}}" method="POST">
             <h2>Demand Prediction</h2>
             <h3>WeekNumber(8)</h3>
             <input id="first" name="WeekNumber" type="number ">
