--- a/templates/index.html
+++ b/templates/index.html
@@ -15,18 +15,18 @@
             <h2>Demand Prediction</h2>
             <h3>WeekNumber(8)</h3>
             <input id="first" name="WeekNumber" type="number ">
-            <h3>SalesDepotID?</h3><br><input id="second" name="SalesDepotID" required="required">
+            <h3>SalesDepotID?</h3><input id="second" name="SalesDepotID" required="required">
             <h3>SalesChannelID?</h3><input id="third" name="SalesChannelID" required="required">
-            <h3>RouteID ?</h3><br><input id="fourth" name="RouteID" required="required">
-	    <h3>ClientID ?</h3><br><input id="fifth" name="ClientID" required="required">
-	    <h3>ProductID ?</h3><br><input id="sixth" name="ProductID" required="required">
-	    <h3>NewClientName ?</h3><br><input id="seventh" name="NewClientName" required="required">
-	    <h3>NewProductName ?</h3><br><input id="eighth" name="NewProductName" required="required">
-	    <h3>pieces ?</h3><br><input id="ninth" name="pieces" required="required">
-	    <h3>weight ?</h3><br><input id="tenth" name="weight" required="required">
-	    <h3>brand ?</h3><br><input id="eleventh" name="brand" required="required">
-	    <h3>Town ?</h3><br><input id="twelth" name="Town" required="required">
-	    <h3>State ?</h3><br><input id="therteenth" name="State" required="required">
+            <h3>RouteID ?</h3><input id="fourth" name="RouteID" required="required">
+	    <h3>ClientID ?</h3><input id="fifth" name="ClientID" required="required">
+	    <h3>ProductID ?</h3><input id="sixth" name="ProductID" required="required">
+	    <h3>NewClientName ?</h3><input id="seventh" name="NewClientName" required="required">
+	    <h3>NewProductName ?</h3><input id="eighth" name="NewProductName" required="required">
+	    <h3>pieces ?</h3><input id="ninth" name="pieces" required="required">
+	    <h3>weight ?</h3><input id="tenth" name="weight" required="required">
+	    <h3>brand ?</h3><input id="eleventh" name="brand" required="required">
+	    <h3>Town ?</h3><input id="twelth" name="Town" required="required">
+	    <h3>State ?</h3><input id="therteenth" name="State" required="required">
             </select>
             <br><br><button id="sub" type="submit ">Calculate Demand for product</button>
             <br>
@@ -146,6 +146,60 @@
         }
         
         #fourth {
+            border-radius: 14px;
+            height: 25px;
+            font-size: 20px;
+            text-align: center;
+        }
+	#fifth {
+            border-radius: 14px;
+            height: 25px;
+            font-size: 20px;
+            text-align: center;
+        }
+	#sixth {
+            border-radius: 14px;
+            height: 25px;
+            font-size: 20px;
+            text-align: center;
+        }
+	#seventh {
+            border-radius: 14px;
+            height: 25px;
+            font-size: 20px;
+            text-align: center;
+        }
+	#eighth {
+            border-radius: 14px;
+            height: 25px;
+            font-size: 20px;
+            text-align: center;
+        }
+	#ninth {
+            border-radius: 14px;
+            height: 25px;
+            font-size: 20px;
+            text-align: center;
+        }
+	#tenth {
+            border-radius: 14px;
+            height: 25px;
+            font-size: 20px;
+            text-align: center;
+        }
+	#eleventh {
+            border-radius: 14px;
+            height: 25px;
+            font-size: 20px;
+            text-align: center;
+        }
+	#twelth {
+            border-radius: 14px;
+            height: 25px;
+            font-size: 20px;
+            text-align: center;
+        }
+	#therteenth {
             border-radius: 14px;
             height: 25px;
             font-size: 20px;
