--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 	    <h3>Town ?</h3><input id="twelth" name="Town" required="required">
 	    <h3>State ?</h3><input id="therteenth" name="State" required="required">
             </select>
-            <br><br><button id="sub" type="submit ">Calculate Demand for product</button>
+            <br><br><button id="sub" type="submit ">Calculate Demand</button>
             <br>
 
 
