--- a/templates/index.html
+++ b/templates/index.html
@@ -22,13 +22,13 @@
 	    <h3>ProductID ?</h3><input id="sixth" name="ProductID" required="required">
 	    <h3>NewClientName ?</h3><input id="seventh" name="NewClientName" required="required">
 	    <h3>NewProductName ?</h3><input id="eighth" name="NewProductName" required="required">
-	    <h3>pieces ?</h3><input id="ninth" name="piece" required="required">
+	    <h3>pieces ?</h3><input id="ninth" name="pieces" required="required">
 	    <h3>weight ?</h3><input id="tenth" name="weight" required="required">
 	    <h3>brand ?</h3><input id="eleventh" name="brand" required="required">
 	    <h3>Town ?</h3><input id="twelth" name="Town" required="required">
 	    <h3>State ?</h3><input id="therteenth" name="State" required="required">
             </select>
-            <br><br><button id="sub" type="submit ">Calculate Demand</button>
+            <br><br><button id="sub" type="submit ">Calculate Demand for product</button>
             <br>
 
 
